<resources>
    <string name="app_name">Owe Track</string>
    <string name="your_total_expenses">Расходы на сегодня</string>
    <string name="your_goals">Ваши цели</string>
    <string name="active">Активные</string>
    <string name="completed">Завершенные</string>
    <string name="left_days">осталось %1$d дней</string>
    <string name="repeat_template">"Каждый %1$d %2$s %3$d раз"</string>
    <string name="_01_01_2021">##/##/####</string>
    <string name="_35_000">35.000</string>
    <string name="create">Создать</string>
    <string name="title">Название</string>
    <string name="ok">Ок</string>
    <string name="message_cannot_withdraw_from_zero_balance">Нельзя снять с нулевого баланса</string>
    <string name="message_wrong_inputs">Неправильные данные</string>
    <string name="message_wrong_title">Неправильное название</string>
    <string name="message_wrong_date">Неправильные число</string>
    <string name="message_zero_amount">Нулевая сумма</string>
    <string name="add">+ Добавить</string>
    <string name="today">Сегодня</string>
    <string name="add_debt">Добавить</string>
    <string name="save">Сохранить</string>
    <string name="name">Название</string>
    <string name="enter_name_here">Введите название</string>
    <string name="amount">Сумма</string>
    <string name="date">Дата</string>
    <string name="once">Один раз</string>
    <string name="interval">Интервал</string>
    <string name="repeats">Повторы</string>
    <string name="unit">Единицы</string>
    <string name="comments">Комментарий</string>
    <string name="back">Назад</string>
    <string name="enter_amount">Введите сумму</string>
    <string name="enter_date">Введите дату</string>
    <string name="day">День</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="close_current">Закрыть текущий</string>
    <string name="complete">Завершить</string>
    <string name="fields_is_empty">Заполните все поля</string>
    <string name="payment_history">История платежей</string>
    <string name="iteration_template">%1$d я оплата</string>
</resources>
